Add functionality to review games
